// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card.vue renders props when passed passed 1`] = `
<div class="card">
  <div class="card__content" style="animation-delay: 0s;">
    <div class="card__value-suit"><span class="value">2</span> <img src="" alt="card symbol" data-img="H.png" class="suit"></div>
    <div class="card__value-suit bottom"><span class="value">2</span> <img src="" class="suit"></div>
  </div>
</div>
`;

exports[`Card.vue renders without crashing 1`] = `
<div class="card">
  <div class="card__content" style="animation-delay: NaNs;">
    <div class="card__value-suit"><span class="value">2</span> <img src="" alt="card symbol" data-img="H.png" class="suit"></div>
    <div class="card__value-suit bottom"><span class="value">2</span> <img src="" class="suit"></div>
  </div>
</div>
`;
